drone-agent-dood.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-agent
  template:
    metadata:
      labels:
        app: drone-agent
    spec:
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
      containers:
        - name: drone-agent
          image: drone/agent:0.8
          imagePullPolicy: Always
          volumeMounts:
          - name: docker-socket
            mountPath: /var/run/docker.sock
