dind.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dind
  template:
    metadata:
      labels:
        app: dind
    spec:
      containers:
        - name: dind
          image: docker:stable-dind
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 2375
          volumeMounts:
          - name: config
            mountPath: /etc/docker/daemon.json
            subPath: daemon.json
      volumes:
      - name: config
        configMap:
          name: dind
---
kind: Service
apiVersion: v1
metadata:
  name: dind
spec:
  selector:
    app: dind
  ports:
  - name: http
    port: 2375
    targetPort: 2375
