drone.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:0.8
          imagePullPolicy: Always
          ports:
          - name: web
            containerPort: 8000
          - name: other
            containerPort: 9000
          volumeMounts:
          - name: drone-data
            mountPath: "/var/lib/drone"
      volumes:
        - name: drone-data
          hostPath:
            path: /data/drone-data
            type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: drone
spec:
  selector:
    app: drone
  ports:
  - name: web
    port: 80
    targetPort: 8000
  - name: other
    port: 9000
    targetPort: 9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: ci${CICD_NAME_SUFFIX}.${CICD_DNS_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: drone
          servicePort: web
