gitea.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea
          ports:
          - name: web
            containerPort: 3000
          volumeMounts:
          - name: gitea-data
            mountPath: "/data"
      volumes:
        - name: gitea-data
          hostPath:
            path: /data/gitea-data
            type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: gitea
spec:
  selector:
    app: gitea
  ports:
  - name: web
    port: 80
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: git${CICD_NAME_SUFFIX}.go-nerd.de
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: web
