owncloud.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: owncloud
  labels:
    app: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: owncloud
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud
spec:
  selector:
    app: owncloud
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: owncloud
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: owncloud.k8s.go-nerd.de
    http:
      paths:
      - path: /
        backend:
          serviceName: owncloud
          servicePort: http
