registry.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
          - name: api
            containerPort: 5000
          volumeMounts:
          - name: registry-data
            mountPath: "/var/lib/registry"
      volumes:
        - name: registry-data
          hostPath:
            path: /data/registry-data
            type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: registry
spec:
  selector:
    app: registry
  ports:
  - name: api
    port: 5000
    targetPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: registry-host
spec:
  selector:
    app: registry
  ports:
  - name: api
    port: 5000
    nodePort: 5000
    targetPort: 5000
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: hub${CICD_NAME_SUFFIX}.go-nerd.de
    http:
      paths:
      - path: /v2
        backend:
          serviceName: registry
          servicePort: api
