shellinabox.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shellinabox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shellinabox
  template:
    metadata:
      labels:
        app: shellinabox
    spec:
      containers:
        - name: shellinabox
          image: localhost:5000/groot/shellinabox:dev
          imagePullPolicy: Always
          ports:
          - name: web
            containerPort: 4200
---
kind: Service
apiVersion: v1
metadata:
  name: shellinabox
spec:
  selector:
    app: shellinabox
  ports:
  - name: web
    port: 80
    targetPort: 4200
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shelinabox
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "registry-auth"
spec:
  rules:
  - host: shell${CICD_NAME_SUFFIX}.${CICD_DNS_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: shellinabox
          servicePort: web
