theia.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: theia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theia
  template:
    metadata:
      labels:
        app: theia
    spec:
      containers:
        - name: theia
          image: theiaide/theia:latest
          imagePullPolicy: Always
          ports:
          - name: web
            containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: theia
spec:
  selector:
    app: theia
  ports:
  - name: web
    port: 80
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shelinabox
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "registry-auth"
spec:
  rules:
  - host: ide${CICD_NAME_SUFFIX}.${CICD_DNS_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: theia
          servicePort: web
